Simplify deployment by restarting specific project instances

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,29 +68,4 @@ jobs:
           username: meotimdihia
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            # Copy the .env file from the old directory to the new one
-            cp -R /home/meotimdihia/sources/project/.env /home/meotimdihia/sources/project3/.env
-            
-            # Stop all instances
-            sudo systemctl stop project2 project3 project4
-
-            # Rename the old project directory as a backup
-            mv /home/meotimdihia/sources/project /home/meotimdihia/sources/project2
-
-            # Replace the old directory with the newly deployed version
-            cp -R /home/meotimdihia/sources/project3/. /home/meotimdihia/sources/project/
-
-            # Start all instances
-            sudo systemctl start project project2 project3 project4
-            
-            # Since you are using a self-hosted setup, you need to clear the CDN cache
-            curl -X POST "https://api.cloudflare.com/client/v4/zones/2d75d17485a663129e45e83a853aede1/purge_cache" \
-                -H "X-Auth-Email: youremail@gmail.com" \
-                -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_KEY }}" \
-                -H "Content-Type: application/json" \
-                --data '{"files":["https://yourdomain.io", "https://yourdomain.io/home?utm_source=web_app_manifest", "https://yourdomain.io/sw.js", "https://yourdomain.io/api/get-build-id"]}'
-            
-            # Now you can delete the old version.
-            # Why do we delete it as the last step? Because this directory is very large when using self-hosting.
-            # In my case, it can grow up to 200GB.
-            rm -rf /home/meotimdihia/sources/project2
+            sudo systemctl restart project@3001 project@3003 project@3005 project@3007
